# changelog-it

./: .gitignore  Cargo.toml  README.md  changelog.config.js  changelog.example.md  package-lock.json  package.json
src/: Gitlab.js  IssueTypes.js  Jira.js  JiraIssueTypes.js  Slack.js  SourceControl.js  Utils.js  cli.js  main.rs
src/github_graphql/: mod.rs  query.graphql
src/logger/: mod.rs
src/templates/: mod.rs
templates/: changelog.md  example.md
