[package]
name = "changelog-it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
askama = "0.12.0"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
graphql_client = { version = "0.13.0" , features = ["reqwest-blocking"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde_json = "1.0.104"
serde = { version = "1.0.182", features = ["derive"]}
log = "0.4.19"
futures = "0.3.28"
